--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -5,8 +5,7 @@
 title: Jasmine Holt
 email: jdha2021@mymail.pomona.edu
 name: Jasmine Holt
-description: >- # this means to ignore newlines until "baseurl:"
-  Welcome to Jasmine's epic website 😎
+description:
 keywords: [Your keywords]
 baseurl: '' # the subpath of your site, e.g. /`blog
 url: '' # the base hostname & protocol for your site, e.g. http://example.com
