--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -35,7 +35,7 @@ jobs:
       - name: Setup Ruby, JRuby and TruffleRuby
         uses: ruby/setup-ruby@v1.165.1
         with:
-          ruby-version: '2.x'
+          ruby-version: '2.7.4'
           rubygems: 'default'
           bundler: true
           bundler-cache: false
