--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -37,8 +37,8 @@ jobs:
         with:
           ruby-version: '2.7.4'
           rubygems: 'default'
-          bundler: true
-          bundler-cache: false
+          bundler: 'true'
+          bundler-cache: 'false'
       - name: Build with Jekyll
         uses: actions/jekyll-build-pages@v1
         with:
