--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -31,6 +31,7 @@ jobs:
 
       # Use GitHub Deploy Action to build and deploy to Github
       # For latest version: `jeffreytse/jekyll-deploy-action@master`
+      - name: Build and Deploy
       - uses: jeffreytse/jekyll-deploy-action@v0.5.1
         with:
           provider: 'github'
