--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -32,6 +32,8 @@ jobs:
         run: cd docs
       - name: Setup Pages
         uses: actions/configure-pages@v4
+      - name: Check dir
+        run: ls
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
 
