--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -34,6 +34,8 @@ jobs:
         uses: actions/configure-pages@v4
       - name: Check dir
         run: ls
+      - name: Change directory
+        run: cd docs
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
 
