--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -28,18 +28,12 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-      - name: Change directory
-        run: cd docs
       - name: Setup Pages
         uses: actions/configure-pages@v4
-      - name: Check dir
-        run: ls
-      - name: Change directory
-        run: cd docs
-      - name: Check dir
-        run: ls
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
+        with:
+          path: docs/_site/
 
   # Deployment job
   deploy:
