Update and rename jekyll-gh-pages.yml to deploy-jekyll-gh-pages.yml

--- a/.github/workflows/deploy-jekyll-gh-pages.yml
+++ b/.github/workflows/deploy-jekyll-gh-pages.yml
@@ -1,4 +1,3 @@
-# Sample workflow for building and deploying a Jekyll site to GitHub Pages
 name: Deploy Jekyll with GitHub Pages dependencies preinstalled
 
 on:
@@ -22,8 +21,8 @@ concurrency:
   cancel-in-progress: false
 
 jobs:
-  # Build job
-  build:
+  # Setup Pages and validate build.
+  setup:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
