--- a/.github/workflows/deploy-jekyll-gh-pages.yml
+++ b/.github/workflows/deploy-jekyll-gh-pages.yml
@@ -21,7 +21,7 @@ concurrency:
   cancel-in-progress: false
 
 jobs:
-  # Setup Pages and validate build.
+  # Setup Pages and validate build
   setup:
     runs-on: ubuntu-latest
     steps:
