--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -8,8 +8,8 @@ name: Jasmine Holt
 description:
 keywords: [Your keywords]
 baseurl: '' # the subpath of your site, e.g. /`blog
-url: '' # the base hostname & protocol for your site, e.g. http://example.com
-domain: 'example.com' # the domain name for your site, e.g. example.com
+url: 'https://leesomi.ink' # the base hostname & protocol for your site, e.g. http://example.com
+domain: 'leesomi.ink'
 language: en
 # Supported languages list:
 # en: English
